# opengl-starter

./: CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
